disable test-repl-glibc.py while I investigate it
Tracked by:
https://bugs.swift.org/browse/SR-1109

--- a/lit.cfg
+++ b/lit.cfg
@@ -66,11 +66,19 @@ config.test_source_root = os.path.join(srcroot)
 # test_source_root: The root path where tests are executing.
 config.test_exec_root = "/tmp/swift-package-tests"
 
-# We don't make use of this yet.
+# The triple is used during XFAIL processing.  If the triple
+# specified here matches one of the XFAIL triples, a failing
+# test is allowed to fail.  We don't actually need the whole
+# thing, just enough to identify Linux, so for now only fill
+# in enough to handle that.
 #
-# FIXME: This is pretty compiler specific and probably should just be ripped out
-# of lit.
-config.target_triple = None
+# TODO figure out how to grab the whole triple for the build
+# target and stick it in here.
+if platform.system() == 'Linux':
+    config.target_triple = 'linux'
+elif platform.system() == 'Darwin':
+    config.target_triple = 'darwin'
+
 
 # On Darwin, always push SDKROOT in the environment.
 #
