--- a/lit.cfg
+++ b/lit.cfg
@@ -53,12 +53,12 @@ config.test_format = lit.formats.ShTest(execute_external = False)
 # suffixes: A list of file extensions to treat as test files.
 #
 # We override this in specific subdirectories to change what we test.
-config.suffixes = [".txt", ".py"]
+config.suffixes = [".txt", ".py", ".md"]
 
 # excludes: A list of directories to exclude from the testsuite. The 'Inputs'
 # subdirectories contain auxiliary inputs for various tests in their parent
 # directories.
-config.excludes = ['Inputs']
+config.excludes = ['README.md', 'CONTRIBUTING.md', 'Inputs']
 
 # test_source_root: The root path where tests are located.
 config.test_source_root = os.path.join(srcroot)
@@ -84,6 +84,7 @@ elif platform.system() == 'Darwin':
 #
 # FIXME: Eventually, when we use xcrun to launch the toolchain items, this
 # should go away.
+config.environment["HOME"] = os.getenv("HOME")
 if platform.system() == "Darwin":
     config.environment["SDKROOT"] = subprocess.check_output(
         ["xcrun", "--sdk", "macosx", "--show-sdk-path"]).strip()
