Allow overriding the tests output path.

--- a/lit.cfg
+++ b/lit.cfg
@@ -64,7 +64,9 @@ config.excludes = ['README.md', 'CONTRIBUTING.md', 'Inputs']
 config.test_source_root = os.path.join(srcroot)
 
 # test_source_root: The root path where tests are executing.
-config.test_exec_root = "/tmp/swift-package-tests"
+config.test_exec_root = lit_config.params.get(
+    "test-exec-root",
+    "/tmp/swift-integration-tests")
 
 # The triple is used during XFAIL processing.  If the triple
 # specified here matches one of the XFAIL triples, a failing
