--- a/lit.cfg
+++ b/lit.cfg
@@ -171,6 +171,7 @@ if not os.path.exists(lldb_path):
     lit_config.fatal("lldb does not exist!")
 
 # Define our supported substitutions.
+config.substitutions.append( ('%{not}', os.path.join(srcroot, "not")) )
 config.substitutions.append( ('%{lldb}', lldb_path) )
 config.substitutions.append( ('%{swift}', swift_path) )
 config.substitutions.append( ('%{swiftc}', swiftc_path) )
