Add a test to check if we can run swift-test on a complex package

--- a/lit.cfg
+++ b/lit.cfg
@@ -186,6 +186,14 @@ config.substitutions.append( ('%{swift}', swift_path) )
 config.substitutions.append( ('%{swiftc}', swiftc_path) )
 config.substitutions.append( ('%{FileCheck}', filecheck_path) )
 
+# Add a substitution for swiftpm build directory. This is useful for
+# running the integration tests locally, for e.g. by changing:
+# %{swift} build -> %{swiftpm_build}/swift-build
+swiftpm_build = lit_config.params.get("swiftpm-build")
+if swiftpm_build is not None:
+    config.substitutions.append( ('%{swiftpm_build}', swiftpm_build) )
+    lit_config.note("testing using swiftpm build directory: {}".format(swiftpm_build))
+
 ###
 
 # Protected against unquoted use of substitutions.
