Add a new test that makes sure that on Linux, all libraries in a snapshot do not load any memory as writeable and executable.

--- a/lit.cfg
+++ b/lit.cfg
@@ -185,6 +185,7 @@ if not os.path.exists(lldb_path):
 
 # Define our supported substitutions.
 config.substitutions.append( ('%{package_path}', package_path) )
+config.substitutions.append( ('%{python}', sys.executable) )
 config.substitutions.append( ('%{not}', os.path.join(srcroot, "not")) )
 config.substitutions.append( ('%{lldb}', lldb_path) )
 config.substitutions.append( ('%{swift}', swift_path) )
