--- a/lit.cfg
+++ b/lit.cfg
@@ -137,7 +137,7 @@ lit_config.note("testing package: %r" % (package_path,))
 # used when testing.
 llvm_bin_dir = lit_config.params.get("llvm-bin-dir")
 if llvm_bin_dir is None:
-    lit_config.fatal("'--param llvm_bin_dir=PATH' is required")
+    lit_config.fatal("'--param llvm-bin-dir=PATH' is required")
 filecheck_path = os.path.join(llvm_bin_dir, 'FileCheck')
 readelf_path = os.path.join(llvm_bin_dir, 'llvm-readelf')
 lit_config.note("testing using 'FileCheck': %r" % (filecheck_path,))
