Add integration test for building Swift benchmarks with SwiftPM

--- a/lit.cfg
+++ b/lit.cfg
@@ -152,6 +152,16 @@ if swiftpm_srcdir is None:
 if os.path.exists(swiftpm_srcdir):
     config.available_features.add("have-swiftpm")
     config.substitutions.append( ('%{swiftpm_srcdir}', swiftpm_srcdir) )
+
+# Use the default Swift src layout if Swift the benchmark suite path is not
+# provided as a param.
+swift_benchmarks_path = lit_config.params.get("swift-benchmarks-path")
+if swift_benchmarks_path is None:
+    swift_benchmarks_path = os.path.abspath(os.path.join(srcroot, "..", "swift", "benchmark"))
+
+if os.path.exists(swift_benchmarks_path):
+    config.available_features.add("have-swift-benchmarks")
+    config.substitutions.append( ('%{swift_benchmarks_path}', swift_benchmarks_path) )
     
 # Find the tools we need.
 
