Add substitutions and a test for the SourceKit stress tester executables

--- a/lit.cfg
+++ b/lit.cfg
@@ -232,3 +232,16 @@ else:
 for name in ('swift-build', 'FileCheck', 'readelf'):
   config.substitutions.append((' {0} '.format(name),
                                ' unquoted-command-name-{0} '.format(name)))
+
+# Add substitutions for SourceKit stress tester executables
+sk_stress_test_path = lit_config.params.get(
+    "sk-stress-test",
+    os.path.join(package_path, "usr", "bin", "sk-stress-test"))
+sk_swiftc_wrapper_path = lit_config.params.get(
+    "sk-swiftc-wrapper",
+    os.path.join(package_path, "usr", "bin", "sk-swiftc-wrapper"))
+
+lit_config.note("testing using 'sk-stress-test': {}".format(sk_stress_test_path))
+lit_config.note("testing using 'sk-swiftc-wrapper': {}".format(sk_swiftc_wrapper_path))
+config.substitutions.append( ('%{sk-stress-test}', sk_stress_test_path) )
+config.substitutions.append( ('%{sk-swiftc-wrapper}', sk_swiftc_wrapper_path) )
