Add a test that makes sure a static Foundation is included in toolchains on Linux.

--- a/lit.cfg
+++ b/lit.cfg
@@ -53,7 +53,7 @@ config.test_format = lit.formats.ShTest(execute_external = False)
 # suffixes: A list of file extensions to treat as test files.
 #
 # We override this in specific subdirectories to change what we test.
-config.suffixes = [".txt", ".py", ".md"]
+config.suffixes = [".txt", ".py", ".md", ".test"]
 
 # excludes: A list of directories to exclude from the testsuite. The 'Inputs'
 # subdirectories contain auxiliary inputs for various tests in their parent
