Use the SwiftPM overrides consistently

--- a/lit.cfg
+++ b/lit.cfg
@@ -220,10 +220,12 @@ config.substitutions.append( ('%{readelf}', readelf_path) )
 swiftpm_build = lit_config.params.get("swiftpm-build")
 if swiftpm_build is not None:
     lit_config.note("testing using swiftpm build directory: {}".format(swiftpm_build))
+    config.substitutions.append( ('%{swift-package}',  os.path.join(swiftpm_build, "swift-package")) )
     config.substitutions.append( ('%{swift-build}',  os.path.join(swiftpm_build, "swift-build")) )
     config.substitutions.append( ('%{swift-test}',  os.path.join(swiftpm_build, "swift-test")) )
     config.substitutions.append( ('%{swift-run}',  os.path.join(swiftpm_build, "swift-run")) )
 else:
+    config.substitutions.append( ('%{swift-package}', swift_path + ' package') )
     config.substitutions.append( ('%{swift-build}', swift_path + ' build') )
     config.substitutions.append( ('%{swift-test}', swift_path + ' test') )
     config.substitutions.append( ('%{swift-run}', swift_path + ' run') )
