Add a test for sourcekit-lsp

--- a/lit.cfg
+++ b/lit.cfg
@@ -187,6 +187,11 @@ repl_swift_dummy_path = lit_config.params.get(
     "repl_swift",
     os.path.join(package_path, "usr", "bin", "repl_swift"))
 lit_config.note("testing using 'repl_swift': {}".format(repl_swift_dummy_path))
+
+sourcekit_lsp_path = lit_config.params.get(
+    "sourcekit-lsp",
+    os.path.join(package_path, "usr", "bin", "sourcekit-lsp"))
+lit_config.note("testing using 'sourcekit-lsp': {}".format(sourcekit_lsp_path))
                     
 # Verify they exist.
 if not os.path.exists(swift_path):
@@ -204,6 +209,9 @@ if not os.path.exists(repl_swift_dummy_path):
     if platform.system() == 'Linux':
         lit_config.fatal("repl_swift does not exist!")
 
+if not os.path.exists(sourcekit_lsp_path):
+    lit_config.fatal("sourcekit-lsp does not exist!")
+
 # Define our supported substitutions.
 config.substitutions.append( ('%{package_path}', package_path) )
 config.substitutions.append( ('%{python}', sys.executable) )
@@ -215,6 +223,7 @@ config.substitutions.append( ('%{swift}', swift_path) )
 config.substitutions.append( ('%{swiftc}', swiftc_path) )
 config.substitutions.append( ('%{FileCheck}', filecheck_path) )
 config.substitutions.append( ('%{readelf}', readelf_path) )
+config.substitutions.append( ('%{sourcekit-lsp}', sourcekit_lsp_path) )
 
 # Add substitutions for swiftpm executables.
 swiftpm_build = lit_config.params.get("swiftpm-build")
