Add sourcekit-lsp requirement to test
We don't install sourcekit-lsp on Ubuntu 14.04, so disable the test when
the binary is not present and print a note.

--- a/lit.cfg
+++ b/lit.cfg
@@ -191,7 +191,6 @@ lit_config.note("testing using 'repl_swift': {}".format(repl_swift_dummy_path))
 sourcekit_lsp_path = lit_config.params.get(
     "sourcekit-lsp",
     os.path.join(package_path, "usr", "bin", "sourcekit-lsp"))
-lit_config.note("testing using 'sourcekit-lsp': {}".format(sourcekit_lsp_path))
                     
 # Verify they exist.
 if not os.path.exists(swift_path):
@@ -209,8 +208,11 @@ if not os.path.exists(repl_swift_dummy_path):
     if platform.system() == 'Linux':
         lit_config.fatal("repl_swift does not exist!")
 
-if not os.path.exists(sourcekit_lsp_path):
-    lit_config.fatal("sourcekit-lsp does not exist!")
+if os.path.exists(sourcekit_lsp_path):
+    config.available_features.add("have-sourcekit-lsp")
+    lit_config.note("testing using 'sourcekit-lsp': {}".format(sourcekit_lsp_path))
+else:
+    lit_config.note("'sourcekit-lsp' unavailable, skipping related tests")
 
 # Define our supported substitutions.
 config.substitutions.append( ('%{package_path}', package_path) )
