--- a/lit.cfg
+++ b/lit.cfg
@@ -91,6 +91,11 @@ if platform.system() == "Darwin":
     config.environment["SDKROOT"] = subprocess.check_output(
         ["xcrun", "--sdk", "macosx", "--show-sdk-path"]).strip()
 
+# XDG_CACHE_HOME can be used to influence the position of the clang
+# module cache for all those tests that do not set that explicitly
+if 'XDG_CACHE_HOME' in os.environ:
+  config.environment['XDG_CACHE_HOME'] = os.environ['XDG_CACHE_HOME']
+
 ###
 
 # Use features like this in lit:
