Disable swift-driver while investigating several test failures
rdar://75547347

--- a/lit.cfg
+++ b/lit.cfg
@@ -91,6 +91,9 @@ if platform.system() == "Darwin":
     config.environment["SDKROOT"] = subprocess.check_output(
         ["xcrun", "--sdk", "macosx", "--show-sdk-path"]).strip()
 
+# FIXME: use the new driver to run the integration tests. rdar://75547347
+config.environment["SWIFT_USE_OLD_DRIVER"] = 'YES'
+
 ###
 
 # Use features like this in lit:
