Add integration test for Swift-DocC

--- a/lit.cfg
+++ b/lit.cfg
@@ -196,7 +196,12 @@ lit_config.note("testing using 'repl_swift': {}".format(repl_swift_dummy_path))
 sourcekit_lsp_path = lit_config.params.get(
     "sourcekit-lsp",
     os.path.join(package_path, "usr", "bin", "sourcekit-lsp"))
-                    
+
+docc_path = lit_config.params.get(
+    "docc",
+    os.path.join(package_path, "usr", "bin", "docc"))
+lit_config.note("testing using 'docc': {}".format(docc_path))
+
 # Verify they exist.
 if not os.path.exists(swift_path):
     lit_config.fatal("swift does not exist!")
@@ -219,6 +224,9 @@ if os.path.exists(sourcekit_lsp_path):
 else:
     lit_config.note("'sourcekit-lsp' unavailable, skipping related tests")
 
+if not os.path.exists(docc_path):
+    lit_config.fatal("docc does not exist!")
+
 # Define our supported substitutions.
 config.substitutions.append( ('%{package_path}', package_path) )
 config.substitutions.append( ('%{python}', sys.executable) )
@@ -231,6 +239,7 @@ config.substitutions.append( ('%{swiftc}', swiftc_path) )
 config.substitutions.append( ('%{FileCheck}', filecheck_path) )
 config.substitutions.append( ('%{readelf}', readelf_path) )
 config.substitutions.append( ('%{sourcekit-lsp}', sourcekit_lsp_path) )
+config.substitutions.append( ('%{docc}', docc_path) )
 
 # Add substitutions for swiftpm executables.
 swiftpm_build = lit_config.params.get("swiftpm-build")
