--- a/lit.cfg
+++ b/lit.cfg
@@ -58,7 +58,7 @@ config.suffixes = [".txt", ".py", ".md", ".test"]
 # excludes: A list of directories to exclude from the testsuite. The 'Inputs'
 # subdirectories contain auxiliary inputs for various tests in their parent
 # directories.
-config.excludes = ['README.md', 'CONTRIBUTING.md', 'Inputs']
+config.excludes = ['README.md', 'CONTRIBUTING.md', 'Inputs', 'DocCTest.docc']
 
 # test_source_root: The root path where tests are located.
 config.test_source_root = os.path.join(srcroot)
