Fix package path for non-/usr builds
This depends on another change to the build script to pass in the correct
package path.

--- a/lit.cfg
+++ b/lit.cfg
@@ -175,31 +175,31 @@ else:
 
 swift_path = lit_config.params.get(
     "swift",
-    os.path.join(package_path, "usr", "bin", "swift"))
+    os.path.join(package_path, "bin", "swift"))
 lit_config.note("testing using 'swift': %r" % (swift_path,))
 
 swiftc_path = lit_config.params.get(
     "swiftc",
-    os.path.join(package_path, "usr", "bin", "swiftc"))
+    os.path.join(package_path, "bin", "swiftc"))
 lit_config.note("testing using 'swiftc': %r" % (swiftc_path,))
 
 lldb_path = lit_config.params.get(
     "lldb",
-    os.path.join(package_path, "usr", "bin", "lldb"))
+    os.path.join(package_path, "bin", "lldb"))
 lit_config.note("testing using 'lldb': {}".format(lldb_path))
 
 repl_swift_dummy_path = lit_config.params.get(
     "repl_swift",
-    os.path.join(package_path, "usr", "bin", "repl_swift"))
+    os.path.join(package_path, "bin", "repl_swift"))
 lit_config.note("testing using 'repl_swift': {}".format(repl_swift_dummy_path))
 
 sourcekit_lsp_path = lit_config.params.get(
     "sourcekit-lsp",
-    os.path.join(package_path, "usr", "bin", "sourcekit-lsp"))
+    os.path.join(package_path, "bin", "sourcekit-lsp"))
 
 docc_path = lit_config.params.get(
     "docc",
-    os.path.join(package_path, "usr", "bin", "docc"))
+    os.path.join(package_path, "bin", "docc"))
 lit_config.note("testing using 'docc': {}".format(docc_path))
 
 # Verify they exist.
