--- a/lit.cfg
+++ b/lit.cfg
@@ -96,6 +96,9 @@ if platform.system() == "Darwin":
 if 'XDG_CACHE_HOME' in os.environ:
   config.environment['XDG_CACHE_HOME'] = os.environ['XDG_CACHE_HOME']
 
+if sys.version_info[0] >= 3:
+    config.environment['PYTHONIOENCODING'] = 'UTF8'
+
 ###
 
 # Use features like this in lit:
