Add validation check for WebAssembly compiler backend
This does not check the stdlib/runtime since they are not part of
toolchain yet.

--- a/lit.cfg
+++ b/lit.cfg
@@ -148,8 +148,10 @@ if llvm_bin_dir is None:
     lit_config.fatal("'--param llvm-bin-dir=PATH' is required")
 filecheck_path = os.path.join(llvm_bin_dir, 'FileCheck')
 readelf_path = os.path.join(llvm_bin_dir, 'llvm-readelf')
+readobj_path = os.path.join(llvm_bin_dir, 'llvm-readobj')
 lit_config.note("testing using 'FileCheck': %r" % (filecheck_path,))
 lit_config.note("testing using 'readelf': %r" % (readelf_path,))
+lit_config.note("testing using 'readobj': %r" % (readobj_path,))
 
 
 # Use the default Swift src layout if swiftpm is not provided as a
@@ -241,6 +243,7 @@ config.substitutions.append( ('%{swift}', swift_path) )
 config.substitutions.append( ('%{swiftc}', swiftc_path) )
 config.substitutions.append( ('%{FileCheck}', filecheck_path) )
 config.substitutions.append( ('%{readelf}', readelf_path) )
+config.substitutions.append( ('%{readobj}', readobj_path) )
 config.substitutions.append( ('%{sourcekit-lsp}', sourcekit_lsp_path) )
 config.substitutions.append( ('%{docc}', docc_path) )
 
